--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
+# 데이터 보안
+*.yml
+*.properties
+
+
 ### STS ###
 .apt_generated
 .classpath
@@ -31,3 +37,4 @@ build/
 
 ### VS Code ###
 .vscode/
+
