--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -98,6 +98,10 @@ jobs:
           host: ${{ secrets.LIVE_SERVER_IP }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script_stop: true
-          script: |
-            sudo docker stop ${{env.CURRENT_UPSTREAM}}
-            sudo docker rm ${{env.CURRENT_UPSTREAM}}
+         script: |
+                if sudo docker ps -a --format '{{.Names}}' | grep -q "${{env.CURRENT_UPSTREAM}}"; then
+                   sudo docker stop ${{env.CURRENT_UPSTREAM}}
+                   sudo docker rm ${{env.CURRENT_UPSTREAM}}
+                else
+                   echo "No container found for ${{env.CURRENT_UPSTREAM}}"
+                fi
