--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -42,25 +42,25 @@ jobs:
     steps:
       - name: Set target IP
         run: |
-          STATUS=$(curl -o /dev/null -w "%{http_code}" "http://${{ secrets.LIVE_SERVER_IP }}/env")
-          echo $STATUS
-          if [ $STATUS = 200 ]; then
-            CURRENT_UPSTREAM=$(curl -s "http://${{ secrets.LIVE_SERVER_IP }}/env")
-          else
+          STATUS=$(curl -o /dev/null -s -w "%{http_code}" "http://${{ secrets.LIVE_SERVER_IP }}:8086/env")
+          if [ "$STATUS" -eq 200 ]; then
+            CURRENT_UPSTREAM=blue
+          elif [ "$(curl -o /dev/null -s -w "%{http_code}" "http://${{ secrets.LIVE_SERVER_IP }}:8087/env")" -eq 200 ]; then
             CURRENT_UPSTREAM=green
+          else
+            echo "No active upstream found"
+            exit 1
           fi
-          echo CURRENT_UPSTREAM=$CURRENT_UPSTREAM >> $GITHUB_ENV
-          if [ $CURRENT_UPSTREAM = blue ]; then
+          echo "CURRENT_UPSTREAM=$CURRENT_UPSTREAM" >> $GITHUB_ENV
+
+          if [ "$CURRENT_UPSTREAM" = "blue" ]; then
             echo "CURRENT_PORT=8086" >> $GITHUB_ENV
             echo "STOPPED_PORT=8087" >> $GITHUB_ENV
             echo "TARGET_UPSTREAM=green" >> $GITHUB_ENV
-          elif [ $CURRENT_UPSTREAM = green ]; then
+          elif [ "$CURRENT_UPSTREAM" = "green" ]; then
             echo "CURRENT_PORT=8087" >> $GITHUB_ENV
             echo "STOPPED_PORT=8086" >> $GITHUB_ENV
             echo "TARGET_UPSTREAM=blue" >> $GITHUB_ENV
-          else
-            echo "error"
-            exit 1
           fi
           
       - name: Docker compose
@@ -72,12 +72,12 @@ jobs:
           script_stop: true
           script: |
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/live_server:latest
-            sudo docker-compose -f docker-compose-${{env.TARGET_UPSTREAM}}.yml up -d
-      
+            sudo docker-compose -f docker-compose-${{ env.TARGET_UPSTREAM }}.yml up -d
+
       - name: Check deploy server URL
         uses: jtalk/url-health-check-action@v3
         with:
-          url: http://${{ secrets.LIVE_SERVER_IP }}:${{env.STOPPED_PORT}}/env
+          url: http://${{ secrets.LIVE_SERVER_IP }}:${{ env.CURRENT_PORT }}/env
           max-attempts: 3
           retry-delay: 10s
 
@@ -89,7 +89,10 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script_stop: true
           script: |
-            sudo docker exec -i nginxserver bash -c 'echo "set \$service_url ${{ env.TARGET_UPSTREAM }};" > /etc/nginx/conf.d/service-env.inc && nginx -s reload' 
+            sudo docker exec -i nginxserver bash -c '
+              echo "set \$service_url http://${{ secrets.LIVE_SERVER_IP }}:${{ env.CURRENT_PORT }};" > /etc/nginx/conf.d/service-env.inc
+              nginx -s reload
+            '
 
       - name: Stop current server
         uses: appleboy/ssh-action@master
@@ -99,9 +102,10 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script_stop: true
           script: |
-                if sudo docker ps -a --format '{{.Names}}' | grep -q "${{env.CURRENT_UPSTREAM}}"; then
-                   sudo docker stop ${{env.CURRENT_UPSTREAM}}
-                   sudo docker rm ${{env.CURRENT_UPSTREAM}}
-                else
-                   echo "No container found for ${{env.CURRENT_UPSTREAM}}"
-                fi
+            if sudo docker ps -a --format '{{.Names}}' | grep -q "${{ env.CURRENT_UPSTREAM }}"; then
+              echo "Stopping container: ${{ env.CURRENT_UPSTREAM }}"
+              sudo docker stop ${{ env.CURRENT_UPSTREAM }}
+              sudo docker rm ${{ env.CURRENT_UPSTREAM }}
+            else
+              echo "Container not found for ${{ env.CURRENT_UPSTREAM }}"
+            fi
