--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Install JDK 17
         uses: actions/setup-java@v3
         with:
@@ -25,6 +26,9 @@ jobs:
           chmod 777 ./mvnw
           ./mvnw clean package -Dmaven.test.skip=true
 
+      - name: Set Spring Profile to Blue
+        run: echo "SPRING_PROFILES_ACTIVE=blue" >> $GITHUB_ENV  # 환경 변수로 blue 프로파일 설정
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -32,9 +36,14 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker
-        run: docker build --platform linux/amd64 -t ${{ secrets.DOCKERHUB_USERNAME }}/live_server .
+        run: docker build --platform linux/amd64 -t ${{ secrets.DOCKERHUB_USERNAME }}/live_server . 
+
       - name: Push Docker
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/live_server:latest
+
+      - name: Run Application with Spring Profile
+        run: |
+          docker run -e SPRING_PROFILES_ACTIVE=blue ${{ secrets.DOCKERHUB_USERNAME }}/live_server:latest
         
   deploy:
     needs: build
