--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.username=Portfolio
 spring.datasource.password=Yunseo12!!
 
 
+spring.profiles.active=${PROFILES}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
