--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
-
+<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 		<!-- Spring Web: 기본 웹 서버와 컨트롤러 기능 제공 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
